Wed Jul 09 12:24:32 2003  George Lebl <jirka@5z.com>

	* linux-proc.c: Fixed up the network code to read the correct fields,
	  not crash on unknown network types, stop memcpy/memset weirdness,
	  still utterly utterly horrible code though

	* properties.c: respect key writability

2003-06-19  Kevin Vandersloot

	* main.c: Clamp the percentage between 0 and 100. Fixes bug #107407

2003-06-05  Ray Strode  <halfline@hawaii.rr.com>

	* properties.c (color_picker_set_cb): Add missing check for
	load average property (bug #114477).
	
2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>

	* load-graph.c:  Reduce padding on right & bottom inside edges of the frame.
	
2003-06-02  Kevin Vandersloot

	* load-graph.c: Use shadow-in on frame for better look. From Tuomas Kuosmanen.
	Fixes bug #79676

2003-06-02  Kevin Vandersloot

	* main.c: expand the applet for Fitt's law and fix issue when switching between different
	panels. Fixes bug #94139.
	
	* load-graph.c: fix some spacing issues.

2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the action area of the preferences dialog.
	Correct the spacing of unit labels after spin controls.
	
	* GNOME_MultiloadApplet.xml:  Change "Run Detailed System Monitor" 
	menu item to "Open System Monitor".
	
2003-05-12  Kevin Vandersloot <kfv101@psu.edu>

	* main.c: run gnome-system-monitor when the applet is double clicked or
	when enter/space is pressed. Patch by jl1192 at messiah dot edu. Fixes
	bug #80351

2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify widget padding.

2003-04-22  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the preferences dialog.  Also, fix
	a bug that caused the 'Load' checkbox to remain insensitive.

2003-04-13  Kevin Vandersloot <kfv101@psu.edu>

	* netload.c, propeties.c, linux-proc.c: add the ability to control the network background color.
	Fixes bug #102088

2003-04-08  Kevin Vandersloot <kfv101@psu.edu>
