@@ -1,3 +1,7 @@
+2003-07-21  Kevin Vandersloot
+
+	* load-graph.c: Fix sizing due to recent panel changes and make saner.
+
 Wed Jul 09 12:24:32 2003  George Lebl <jirka@5z.com>
 
 	* linux-proc.c: Fixed up the network code to read the correct fields,
